# snander_electricboogaloo

./: README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
src/: bitbang_microwire.c  bitbang_microwire.h  cmdbuff.h  file.c  file.h  flash.h  i2c_controller.c  i2c_controller_local.h  i2c_controller_old.h  i2c_eeprom.c  i2c_eeprom_api.h  i2c_eeprom_ids.h  main.c  main.h  meson.build  mstarddc_spi.c  mstarddc_spi.h  mw_eeprom.c  mw_eeprom_api.h  spi_controller.c  spi_controller_local.h  spi_controller_old.h  spi_flash.c  spi_flash.h  spi_nand_cmds.h  spi_nand_flash.c  spi_nand_flash.h  spi_nand_flash_junk.c  spi_nand_ids.c  spi_nand_ids.h  spi_nor_cmds.h  spi_nor_flash.c  spi_nor_flash.h  spi_nor_ids.c  spi_nor_ids.h  timer.c  timer.h  types.h  ui.c  ui.h
subprojects/: .gitignore  libch341a.wrap
